[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "lpaggreg_py"
version = "0.0.1"
description = "Python bindings for lpaggreg"
authors = [{name = "Christian Asch"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.scikit-build]
build-dir = "build"
wheel.packages = ["src/lpaggreg_py"]
cmake.args = [
           "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
	   "-DCMAKE_BUILD_TYPE=Release",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"